--- a/msf_updates/cfg/SinglePoseSensor.cfg
+++ b/msf_updates/cfg/SinglePoseSensor.cfg
@@ -39,7 +39,7 @@ gen.add("core_set_height",        bool_t,   SET_HEIGHT["value"],                
 gen.add("core_height",            double_t, MISC["value"],                           "height in m for init",         1,          0.1,       20)
 
 gen.add("pose_initial_scale",		double_t, 	MISC["value"],               	"value for initial scale",          1,      	0.001,		30)
-gen.add("pose_fixed_scale",			bool_t,   	MISC["value"],              	"fix scale",                    	False)
+gen.add("pose_fixed_scale",			bool_t,   	MISC["value"],              	"fix scale",                    	True)
 gen.add("pose_fixed_p_ic",			bool_t, 	MISC["value"],					"fix calibration state position", False)
 gen.add("pose_fixed_q_ic",			bool_t, 	MISC["value"],					"fix calibration state attitude", False)
 gen.add("pose_fixed_p_wv",			bool_t, 	MISC["value"],					"fix world vision position drift", False)
@@ -53,6 +53,6 @@ gen.add("pose_noise_p_ic",			double_t, 	MISC["value"],                  "propaga
 gen.add("pose_noise_q_ic",			double_t, 	MISC["value"],                  "propagation: noise q_ic (std. dev)",           0.0,        0,          10.0)
 gen.add("pose_noise_meas_p",		double_t, 	MISC["value"],                  "noise for measurement sensor (std. dev)",         0.01,          0,       10)
 gen.add("pose_noise_meas_q",		double_t, 	MISC["value"],                  "noise for measurement sensor (std. dev)",         0.01,          0,       10)
-gen.add("pose_delay", 				double_t, 	MISC["value"], 					"fix delay in seconds", 0.02, -2.0, 2.0)
+gen.add("pose_delay", 				double_t, 	MISC["value"], 					"fix delay in seconds", -0.15, -2.0, 2.0)
 
 exit(gen.generate(PACKAGE, "Config", "SinglePoseSensor"))
