* added max buffer length as dynamic reconfigure parameter

--- a/msf_core/cfg/MSF_Core.cfg
+++ b/msf_core/cfg/MSF_Core.cfg
@@ -34,5 +34,6 @@ gen.add("core_noise_acc",         double_t, 0,                           "noise 
 gen.add("core_noise_accbias",     double_t, 0,                           "noise acceleration bias  (std. dev)",       5e-8, 	1.0e-8, 	0.1)
 gen.add("core_noise_gyr",         double_t, 0,                           "noise gyros (std. dev)",           0.0004,  	1.0e-4,   	0.5)
 gen.add("core_noise_gyrbias",     double_t, 0,                           "noise gyro biases  (std. dev)",       3e-6, 	1.0e-7, 	0.1)
+gen.add("core_max_buffer_length", double_t, 0,                           "maximum length of state and measurement buffer (sec)", 10.0, 0.01, 120.0)
 
 exit(gen.generate(PACKAGE, "Config", "MSF_Core"))
