* parameter adjustments for quad1 in Vicon -- still room for improvement

--- a/msf_updates/cfg/SinglePoseSensor.cfg
+++ b/msf_updates/cfg/SinglePoseSensor.cfg
@@ -39,11 +39,11 @@ gen.add("core_set_height",        bool_t,   SET_HEIGHT["value"],                
 gen.add("core_height",            double_t, MISC["value"],                           "height in m for init",         1,          0.1,       20)
 
 gen.add("pose_initial_scale",		double_t, 	MISC["value"],               	"value for initial scale",          1,      	0.001,		30)
-gen.add("pose_fixed_scale",			bool_t,   	MISC["value"],              	"fix scale",                    	False)
-gen.add("pose_fixed_p_ic",			bool_t, 	MISC["value"],					"fix calibration state position", False)
-gen.add("pose_fixed_q_ic",			bool_t, 	MISC["value"],					"fix calibration state attitude", False)
-gen.add("pose_fixed_p_wv",			bool_t, 	MISC["value"],					"fix world vision position drift", False)
-gen.add("pose_fixed_q_wv",			bool_t, 	MISC["value"], 				    "fix world vision attitude drift", False)
+gen.add("pose_fixed_scale",			bool_t,   	MISC["value"],              	"fix scale",                    	True)
+gen.add("pose_fixed_p_ic",			bool_t, 	MISC["value"],					"fix calibration state position", True)
+gen.add("pose_fixed_q_ic",			bool_t, 	MISC["value"],					"fix calibration state attitude", True)
+gen.add("pose_fixed_p_wv",			bool_t, 	MISC["value"],					"fix world vision position drift", True)
+gen.add("pose_fixed_q_wv",			bool_t, 	MISC["value"], 				    "fix world vision attitude drift", True)
 
 gen.add("pose_noise_scale",			double_t, 	MISC["value"],                  "propagation: noise scale (std. dev)",         0.0,		0, 	        10.0)
 
