Some further changes in parameters.

--- a/msf_updates/cfg/SinglePoseSensor.cfg
+++ b/msf_updates/cfg/SinglePoseSensor.cfg
@@ -34,7 +34,7 @@ SET_HEIGHT      = gen.const("SET_HEIGHT",              int_t, 0x00000004, "core_
 
 
 #       Name                 Type      Reconfiguration level                Description   Default   Min   Max
-gen.add("core_init_filter",       bool_t,   INIT_FILTER["value"],                    "call filter init using defined scale",                    False)
+gen.add("core_init_filter",       bool_t,   INIT_FILTER["value"],                    "call filter init using defined scale",                    True)
 gen.add("core_set_height",        bool_t,   SET_HEIGHT["value"],                     "call filter init using defined height",                    False)
 gen.add("core_height",            double_t, MISC["value"],                           "height in m for init",         1,          0.1,       20)
 
